# Pro-Logic-Scheduler

./: .gitignore  ARCHITECTURE.md  BASELINE_METRICS.md  BUTTON_DEBUG.md  BUTTON_FIX_SUMMARY.md  CLARIFICATION_NO_FRAMEWORKS.md  COMPLETE_ANALYSIS.md  CONFIDENCE_ASSESSMENT.md  CONSTRAINT_ICON_FIXES_COMPLETE.md  DEBUG_BUTTONS.md  DEBUG_DATE_DOUBLE_ENTRY.md  DEBUG_TEST_RESULTS.md  DEEP_INVESTIGATION_FINDINGS.md  DEEP_INVESTIGATION_REPORT.md  FINAL-RECOMMENDATION.md  FINAL_CONFIDENCE_ASSESSMENT.md  FIX_IMPLEMENTATION_REPORT.md  HOW_TO_DEBUG_ON_MAC.md  IMPROVED_CONFIDENCE_AND_PERFORMANCE.md  INTERACTION_DEBUG_SUMMARY.md  INVESTIGATION_REPORT.md  MIGRATION_PLAN.md  MIGRATION_PLAYBOOK.md  MIGRATION_PREPARATION_SUMMARY.md  PHASE1_QUICK_TEST.md  PHASE1_RETEST_ANALYSIS.md  PHASE1_TEST_GUIDE.md  PHASE1_TEST_RESULTS_ANALYSIS.md  PHASE1_TEST_SCRIPT.js  PHASE2_FIXES_SUMMARY.md  PHASE2_PREPARATION.md  PHASE2_QUICK_REFERENCE.md  PHASE2_TEST_SCRIPT.js  PHASE_6_PREPARATION.md  PHASE_7_PREPARATION.md  POC_UX_COMPARISON.md  PRODUCTION_READINESS_PLAN.md  QUICK_START.md  QUICK_START_PRODUCTION_FIXES.md  README.md  (+32 more)
docs/: CODING_GUIDELINES.md  DEPENDENCY_INJECTION_MIGRATION_PLAN.md  KNOWN_TEST_FAILURES.md  PHASE1_ARCHITECTURAL_OPTIMIZATION.md  PHASE2_COMMAND_REGISTRY_IMPLEMENTATION.md  PHASE3_CONFIDENCE_BOOST.md  PHASE3_DECOMPOSITION_AUDIT.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_TESTING_SUMMARY.md  PHASE3_TYPE_SAFETY_AUDIT.md  PHASE4_CONFIDENCE_BOOST.md  PHASE4_DECISION_ANALYSIS.md  PHASE4_DECOMPOSITION_AUDIT.md  PHASE4_FINAL_VERIFICATION.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PHASE4_OPINION_REVIEW.md  PHASE4_PRE_IMPLEMENTATION_CHECK.md  PURE_DI_EXECUTION_CHECKLIST.md  PURE_DI_SUBORDINATE_FACTORY_PLAN.md  SCHEDULER_SERVICE_DECOMPOSITION_PLAN.md  SCHEDULER_SERVICE_FULL_DECOMPOSITION_PLAN.md  TRUE_PURE_DI_IMPLEMENTATION_PLAN.md
features/: table-editor.md
playwright-report/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  cpm.rs  date_utils.rs  engine_state.rs  main.rs  types.rs
src-wasm/: Cargo.toml
src-wasm/src/: cpm.rs  date_utils.rs  lib.rs  types.rs  utils.rs
(+326 files in other folders)
