[package]
name = "pro-logic-scheduler"
version = "2.0.0"
description = "High-Performance Construction Scheduling"
authors = ["Pro Logic"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-confirm", "dialog-message", "dialog-ask", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
