[package]
name = "pro-logic-scheduler"
version = "2.0.0"
description = "High-Performance Construction Scheduling"
authors = ["Pro Logic"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
# chrono removed - was only used by deleted CPM code

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
